NEWS
0.44-1
     o	New 'mif2' option for 'mif'.

     o	Remove all data()-loadable pomp objects.
	To load the prebuilt example pomp objects from previous versions, use the new 'pompExample' function.
	E.g., instead of 'data(euler.sir)', do 'pompExample("euler.sir")'.

0.43-4
     o	Clean up tests.

0.43-3
     o	Fix bug in 'pompBuilder' on mac.

     o	Fix bug in 'dmeasure' when log=TRUE.  Bug located by R. Reiner.

     o	Add 'eff.sample.size' and 'cond.logLik' methods for 'pfilterd.pomp' objects.

0.43-1
     o	Modify 'traj.match.objfun' to allow arbitrary parameters to be passed to the ODE integrator.

     o	Add 'params' argument to 'pomp' so that parameters can be specified at the time the pomp object is created.

0.42-6
     o	Improve error checking in 'pomp'.

     o	Add support for covariates to 'pompBuilder'.

     o	Add native parameter transformation routines to the demos.

     o	Change the warning behavior in 'lookup_table' so that warnings are not generated unless true extrapolation is performed (i.e., eliminate the warnings at the boundary).

     o	Some small modifications to the 'pomp.h' header file.

0.42-4
     o	When 'trajectory' calls 'ode', there is a need to preserve information across calls to the vectorfield-evaluating function.
     	The code has been modified to do this in a cleaner way.

0.42-2
     o	Several minor bugs have been fixed.
     	See the ChangeLog for details.

0.42-1
     o	An EXPERIMENTAL facility for constructing pomp objects out of native C routines is now included (pompBuilder).
     	This facility is being actively developed and future changes may not be backward compatible.

     o	A new facility allowing access to the 'userdata' slot of a pomp object from compiled 'rprocess', 'rmeasure', 'dprocess', 'dmeasure', 'skeleton', and 'partrans' codes is now available.
     	Calls to the new C routines 'get_pomp_userdata', 'get_pomp_userdata_int', and 'get_pomp_userdata_double' allow retrieval of these elements.
