@@ -19,16 +19,13 @@ mif(object, \dots)
 \S4method{mif}{pomp}(object, Nmif = 1, start, pars, ivps = character(0),
     particles, rw.sd, Np, ic.lag, var.factor, cooling.factor,
     cooling.fraction, method = c("mif","unweighted","fp","mif2"),
-    tol = 1e-17, max.fail = 0,
+    tol = 1e-17, max.fail = Inf,
     verbose = getOption("verbose"), transform = FALSE, \dots)
-\S4method{mif}{pfilterd.pomp}(object, Nmif = 1, Np, tol, max.fail = 0,
-    verbose = getOption("verbose"), \dots)
+\S4method{mif}{pfilterd.pomp}(object, Nmif = 1, Np, tol, \dots)
 \S4method{mif}{mif}(object, Nmif, start, pars, ivps,
     particles, rw.sd, Np, ic.lag, var.factor, cooling.factor, cooling.fraction,
-    method, tol, max.fail = 0,
-    verbose = getOption("verbose"), transform, \dots)
-\S4method{continue}{mif}(object, Nmif = 1, max.fail = 0,
-    verbose = getOption("verbose"), \dots)
+    method, tol, transform, \dots)
+\S4method{continue}{mif}(object, Nmif = 1, \dots)
 }
 \arguments{
   \item{object}{
@@ -103,12 +100,10 @@ mif(object, \dots)
     \code{method="mif2"} [EXPLAIN]
   }
   \item{tol}{
-    numeric scalar; particles with log likelihood below \code{tol} are considered to be \dQuote{lost}.
-    A filtering failure occurs when, at some time point, all particles are lost.
+    See the description under \code{\link{pfilter}}.
   }
   \item{max.fail}{
-    integer; maximum number of filtering failures permitted.
-    If the number of failures exceeds this number, execution will terminate with an error.
+    See the description under \code{\link{pfilter}}.
   }
   \item{verbose}{
     logical; if TRUE, print progress reports.
